@@ -1,4 +1,4 @@
-public class StringToIntConversion {
+public class Quiz_10_7 {
     public static void main(String[] args) {
         String s = "123";
 
@@ -14,8 +14,12 @@ public class StringToIntConversion {
         int i3 = (int)(Double.parseDouble(s));
         System.out.println("Using (int)(Double.parseDouble(s)): " + i3);
 
-        // Method 4: Using new Integer(s).intValue() (Deprecated)
-        int i4 = (new Integer(s)).intValue();
-        System.out.println("Using new Integer(s).intValue(): " + i4);
+        // Method 3: Using Integer.valueOf(s) to int
+        int i4 = Integer.valueOf(s);
+        System.out.println("Using Integer.valueOf(s): " + i4);
+
+//        // Method 4: Using new Integer(s).intValue()
+//        int i4 = (new Integer(s)).intValue();
+//        System.out.println("Using new Integer(s).intValue(): " + i4);
     }
 }
